[gd_scene load_steps=6 format=3 uid="uid://b167boqjwobsh"]

[ext_resource type="PackedScene" uid="uid://b835064b7wfwc" path="res://Main/assets/life.tscn" id="1_5s0te"]
[ext_resource type="Script" path="res://UI/UI.gd" id="1_5v16l"]
[ext_resource type="StyleBox" uid="uid://bp0xrhut5kt2a" path="res://UI/assets/pinky.tres" id="2_lje1w"]
[ext_resource type="LabelSettings" uid="uid://ctgp887rh7643" path="res://UI/assets/label.tres" id="4_o80mb"]

[sub_resource type="LabelSettings" id="LabelSettings_syy20"]
font_color = Color(0.580673, 0.169616, 0.473681, 1)

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_5v16l")

[node name="SideBar" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 12.0
offset_top = 12.0
offset_right = 56.98
offset_bottom = -12.0
grow_vertical = 2
theme_override_styles/panel = ExtResource("2_lje1w")

[node name="VBox" type="VBoxContainer" parent="SideBar"]
layout_mode = 2

[node name="Label" type="Label" parent="SideBar/VBox"]
layout_mode = 2
text = "Lives:"
label_settings = SubResource("LabelSettings_syy20")

[node name="LivesUI" type="VBoxContainer" parent="SideBar/VBox"]
layout_mode = 2

[node name="Life" parent="SideBar/VBox/LivesUI" instance=ExtResource("1_5s0te")]
layout_mode = 2

[node name="Life2" parent="SideBar/VBox/LivesUI" instance=ExtResource("1_5s0te")]
layout_mode = 2

[node name="Life3" parent="SideBar/VBox/LivesUI" instance=ExtResource("1_5s0te")]
layout_mode = 2

[node name="Life4" parent="SideBar/VBox/LivesUI" instance=ExtResource("1_5s0te")]
layout_mode = 2

[node name="Life5" parent="SideBar/VBox/LivesUI" instance=ExtResource("1_5s0te")]
layout_mode = 2

[node name="ProgressBar" type="ProgressBar" parent="SideBar/VBox"]
custom_minimum_size = Vector2(0, 256)
layout_mode = 2
size_flags_vertical = 10
fill_mode = 3
show_percentage = false

[node name="ScorePanel" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = 84.0
offset_top = 13.0
offset_right = 113.0
offset_bottom = 60.0
theme_override_styles/panel = ExtResource("2_lje1w")

[node name="ScoreUI" type="Label" parent="ScorePanel"]
layout_mode = 2
text = "1"
label_settings = ExtResource("4_o80mb")
